--- a/src/XSRT2/ClassHandlers.tt
+++ b/src/XSRT2/ClassHandlers.tt
@@ -55,6 +55,52 @@ namespace XSRT2 {
 
 		<#
 		ClassDef(
+			"TextBox",
+			true,
+			"Control",
+			new PropEntry[] {
+				StringProp("Text")
+			},
+			new EventEntry[] {
+				new EventEntry() { Name="textChanged", WinRTName="TextChanged", EventType="RoutedEventArgs" }
+			}
+		);
+		#>
+
+		<#
+		ClassDef(
+			"Slider",
+			true,
+			"Control",
+			new PropEntry[] {
+				DoubleProp("Minimum"),
+				DoubleProp("Maximum"),
+				DoubleProp("Value")
+			},
+			new EventEntry[] {
+				new EventEntry() { Name="valueChanged", WinRTName="ValueChanged", EventType="RangeBaseValueChangedEventArgs" }
+			}
+		);
+		#>
+
+		<# ClassDef("Button", true, "ButtonBase", null, null); #>
+
+		<#
+		ClassDef(
+			"CheckBox",
+			true,
+			"ButtonBase",
+			new PropEntry[] {
+				BooleanProp("IsChecked")
+			},
+			new EventEntry[] {
+				new EventEntry() { Name="checked", WinRTName="Checked", EventType="RoutedEventArgs" }
+			}
+		);
+		#>
+
+		<#
+		ClassDef(
 			"ButtonBase",
 			false,
 			"Control",
@@ -82,6 +128,76 @@ namespace XSRT2 {
 			null
 		);
 		#>
+
+		<# ClassDef("StackPanel", true, "Panel", null, null); #>
+
+        internal static class PanelHandler
+        {
+            static void SetPanelChildren(Panel t, JObject obj, JObject lastObj, Dictionary<string, object> namedObjectMap)
+            {
+                Handler.FrameworkElementHandler.SetProperties(t, obj, lastObj, namedObjectMap);
+                List<UIElement> children = new List<UIElement>();
+                IJEnumerable<JToken> lastChildren = null;
+                JToken last;
+                if (lastObj != null && lastObj.TryGetValue("children", out last))
+                {
+                    lastChildren = last.AsJEnumerable();
+                }
+                CollectPanelChildrenWorker(t, obj["children"].AsJEnumerable(), lastChildren, children, namedObjectMap);
+                var setChildrenNeeded = false;
+                if (t.Children.Count == children.Count)
+                {
+                    for (int i = 0; i < children.Count; i++)
+                    {
+                        if (!object.ReferenceEquals(children[i], t.Children[i]))
+                        {
+                            setChildrenNeeded = true;
+                        }
+                    }
+                }
+                else
+                {
+                    setChildrenNeeded = true;
+                }
+
+                if (setChildrenNeeded)
+                {
+                    t.Children.Clear();
+                    foreach (var child in children) { t.Children.Add(child); }
+                }
+            }
+            static void CollectPanelChildrenWorker(Panel t, IJEnumerable<JToken> items, IEnumerable<JToken> lastItems, List<UIElement> children, Dictionary<string, object> namedObjectMap)
+            {
+                IEnumerator<JToken> enumerator = null;
+                if (lastItems != null)
+                {
+                    enumerator = lastItems.GetEnumerator();
+                    enumerator.Reset();
+                }
+                foreach (var child in items)
+                {
+                    JToken lastChild = null;
+                    if (enumerator != null && enumerator.MoveNext()) { lastChild = enumerator.Current; }
+
+                    if (child.Type == JTokenType.Array)
+                    {
+                        CollectPanelChildrenWorker(t, child.AsJEnumerable(), lastChild != null ? lastChild.AsJEnumerable() : null, children, namedObjectMap);
+                    }
+                    else
+                    {
+                        var instance = CreateFromState((JObject)child, lastChild as JObject, namedObjectMap);
+                        children.Add(instance);
+                    }
+                }
+            }
+            internal static void SetProperties(Panel t, JObject obj, JObject lastObj, Dictionary<string, object> namedObjectMap)
+            {
+                FrameworkElementHandler.SetProperties(t, obj, lastObj, namedObjectMap);
+                SetPanelChildren(t, obj, lastObj, namedObjectMap);
+            }
+
+        }
+
 
         static DependencyProperty eventMap = DependencyProperty.RegisterAttached("XSEventMap", typeof(Dictionary<string, string>), typeof(FrameworkElement), PropertyMetadata.Create((object)null));
         static Dictionary<string, CreateCallback> handlers;
@@ -155,7 +271,7 @@ namespace XSRT2 {
             }
             return handlers;
         }
-        static FrameworkElement CreateFromState(JToken item, JToken lastItem, Dictionary<string, object> namedObjectMap)
+        internal static FrameworkElement CreateFromState(JToken item, JToken lastItem, Dictionary<string, object> namedObjectMap)
         {
             if (item.Type == JTokenType.Object)
             {
@@ -210,6 +326,9 @@ PropEntry BasicProp(string name, string setter) {
 PropEntry DoubleProp(string name) {
 	return new PropEntry() { Name=CamelCase(name), SetBody="target." + name + " = x.Value<double>()" };
 }
+PropEntry BooleanProp(string name) {
+	return new PropEntry() { Name=CamelCase(name), SetBody="target." + name + " = Convert.ToBoolean(((JValue)x).Value)" };
+}
 void ClassDef(string name, bool isPublic, string baseTypeName, PropEntry[] props, EventEntry[] events) {
 	if (isPublic) { publicHandlerNames.Add(name); }
 	PushIndent("    ");
@@ -249,8 +368,10 @@ void PropSetter(string name, string baseTypeName, PropEntry[] props, EventEntry[
 	{
 		WriteLine(baseTypeName + "Handler.SetProperties(t, obj, lastObj, namedObjectMap);");
 	}
-	foreach (var prop in props) {
-		WriteLine("TrySet(obj, lastObj, \"" + prop.Name + "\", t, (target, x, lastX) => " + prop.SetBody +");");
+	if (props != null) {
+		foreach (var prop in props) {
+			WriteLine("TrySet(obj, lastObj, \"" + prop.Name + "\", t, (target, x, lastX) => " + prop.SetBody +");");
+		}
 	}
 	if (events != null) {
 		foreach (var e in events) {
@@ -289,8 +410,8 @@ void EventHandler(string eventName, string eventTypeName, string typeName) {
 	WriteLine("map[\""+eventName+"\"] = handlerName;");
 	// remove to avoid duplicates   
 	//
-	WriteLine("element.Click -= "+eventName+"Router;");
-	WriteLine("element.Click += "+eventName+"Router;");
+	WriteLine("element."+eventName+" -= "+eventName+"Router;");
+	WriteLine("element."+eventName+" += "+eventName+"Router;");
 	PopIndent();
 	WriteLine("}");
 }
